--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -173,3 +173,6 @@ en:
   Are you sure you want to delete this post?: 'Are you sure you want to delete this post?'
   Are you sure you want to delete this group?: 'Are you sure you want to delete this group?'
   Are you sure you want to delete this vacation?: 'Are you sure you want to delete this vacation?'
+  Please use the admin login page: 'Please use the admin log in page'
+  An administrator is reviewing your application: 'An administrator is reviewing your application'
+  Invalid email or password: 'Invalid email or password'
