--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -153,3 +153,6 @@ ro:
   Are you sure you want to delete this post?: 'Sigur doriți să ștergeți această postare?'
   Are you sure you want to delete this group?: 'Sigur doriți să ștergeți acest grup?'
   Are you sure you want to delete this vacation?: 'Sigur doriți să ștergeți această vacanță'
+  Please use the admin login page: 'Folosiți pagina de logare pentru administrator'
+  An administrator is reviewing your application: 'Un administrator va examinează aplicarea'
+  Invalid email or password: 'Email sau parolă greșită'
