--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -156,3 +156,9 @@ ro:
   Please use the admin login page: 'Folosiți pagina de logare pentru administrator'
   An administrator is reviewing your application: 'Un administrator va examinează aplicarea'
   Invalid email or password: 'Email sau parolă greșită'
+  End time must be after start time: 'Timpul de sfârșit trebuie să fie după timpul de început'
+  New lesson scheduled: 'Lecția nouă a fost programată'
+  Couldn't schedule lesson: 'Nu a reușit programarea noii lecții'
+  Lesson deleted: 'Lecția a fost ștearsă'
+  New unique lesson: 'Lecție unică nouă'
+  Lesson name: 'Numele lecției'
