--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -157,3 +157,9 @@ ru:
   Please use the admin login page: 'Пожалуйста, используйте страницу входа администратора'
   An administrator is reviewing your application: 'Администратор рассматривает вашу заявку'
   Invalid email or password: 'Неправильный email или пароль'
+  End time must be after start time: 'Время окончания должно быть после времени начала'
+  New lesson scheduled: 'Новый урок был запланирован'
+  Couldn't schedule lesson: 'Новый урок не был запланирован'
+  Lesson deleted: 'Урок был удален'
+  New unique lesson: 'Новый уникальный урок'
+  Lesson name: 'Название урока'
