Timetable, attendances, single_lesson fixes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -167,12 +167,14 @@ en:
   Register child: 'Register child'
   Log out: 'Log out'
   Login: 'Login'
+  Admin Login: 'Admin Login'
   Edit post: 'Edit post'
   Teacher: 'Teacher'
   Price: 'Price'
   Are you sure you want to delete this post?: 'Are you sure you want to delete this post?'
   Are you sure you want to delete this group?: 'Are you sure you want to delete this group?'
   Are you sure you want to delete this vacation?: 'Are you sure you want to delete this vacation?'
+  Are you sure you want to delete this lesson?: 'Are you sure you want to delete this lesson?'
   Please use the admin login page: 'Please use the admin log in page'
   An administrator is reviewing your application: 'An administrator is reviewing your application'
   Invalid email or password: 'Invalid email or password'
@@ -182,3 +184,7 @@ en:
   Lesson deleted: 'Lesson deleted'
   New unique lesson: 'New unique lesson'
   Lesson name: 'Lesson name'
+  Resend confirmation instructions: 'Resend confirmation instructions'
+  Password reset: 'Password reset'
+  Send instructions: 'Send instructions'
+  Delete lesson: 'Delete lesson'
