--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -37,7 +37,7 @@ ro:
   Error finding the right lesson: 'Eroare la găsirea lecției corecte'
   Attendances registered: 'Prezențele au fost înregistrate'
   Current password: 'Parolă curentă'
-  password: 'Parolă'
+  Password: 'Parolă'
   Password confirmation: 'Confirmare parolă'
   Edit child profile: 'Editează profilul copilului'
   First name: 'Prenume'
@@ -145,14 +145,16 @@ ro:
   Study abroad: 'Studii peste hotare'
   Register child: 'Înregistrează un copil'
   Log out: 'Deconectare'
-  Login: 'Conectare'
+  Login: 'Autentificare'
+  Admin Login: 'Autentificare administrator'
   Edit post: 'Editează postarea'
   Delete post: 'Șterge postarea'
   Teacher: 'Profesor'
   Price: 'Preț'
   Are you sure you want to delete this post?: 'Sigur doriți să ștergeți această postare?'
   Are you sure you want to delete this group?: 'Sigur doriți să ștergeți acest grup?'
-  Are you sure you want to delete this vacation?: 'Sigur doriți să ștergeți această vacanță'
+  Are you sure you want to delete this vacation?: 'Sigur doriți să ștergeți această vacanță?'
+  Are you sure you want to delete this lesson?: 'Sigur doriți să ștergeți această lecție?'
   Please use the admin login page: 'Folosiți pagina de logare pentru administrator'
   An administrator is reviewing your application: 'Un administrator va examinează aplicarea'
   Invalid email or password: 'Email sau parolă greșită'
@@ -162,3 +164,7 @@ ro:
   Lesson deleted: 'Lecția a fost ștearsă'
   New unique lesson: 'Lecție unică nouă'
   Lesson name: 'Numele lecției'
+  Resend confirmation instructions: 'Retrimiteți instrucțiunile de confirmare'
+  Password reset: 'Resetare parola'
+  Send instructions: 'Trimiteți instrucțiunile'
+  Delete lesson: 'Șterge lecția'
