--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -147,6 +147,7 @@ ru:
   Register child: 'Регистрация ребенка'
   Log out: 'Выйти'
   Login: 'Вход'
+  Admin Login: 'Вход администратора'
   Edit post: 'Редактирование поста'
   Delete post: 'Удоление поста'
   Teacher: 'Учитель'
@@ -154,6 +155,7 @@ ru:
   Are you sure you want to delete this post?: 'Вы уверены что хотите удалить этот пост?'
   Are you sure you want to delete this group?: 'Вы уверены что хотите удалить эту группу?'
   Are you sure you want to delete this vacation?: 'Вы уверены что хотите удалить эту каникулу'
+  Are you sure you want to delete this lesson?: 'Вы уверены что хотите удалить этот урок?'
   Please use the admin login page: 'Пожалуйста, используйте страницу входа администратора'
   An administrator is reviewing your application: 'Администратор рассматривает вашу заявку'
   Invalid email or password: 'Неправильный email или пароль'
@@ -163,3 +165,7 @@ ru:
   Lesson deleted: 'Урок был удален'
   New unique lesson: 'Новый уникальный урок'
   Lesson name: 'Название урока'
+  Resend confirmation instructions: 'Отправить подтверждение'
+  Password reset: 'Восстановление пароля'
+  Send instructions: 'Отправить инструкции'
+  Delete lesson: 'Удоление урока'
