--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -124,6 +124,7 @@ en:
   Date of birth: 'Date of birth'
   Discount: 'Discount'
   Groups: 'Groups'
+  Group: 'Group'
   Edit account: 'Edit account'
   Approve account: 'Approve account'
   Remove admin: 'Remove admin'
@@ -188,3 +189,7 @@ en:
   Password reset: 'Password reset'
   Send instructions: 'Send instructions'
   Delete lesson: 'Delete lesson'
+  Send message: 'Send message'
+  New message: 'New message'
+  Message was successfully sent: 'Message was successfully sent'
+  Post was successfully created: 'Post was successfully created'
