--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -104,6 +104,7 @@ ru:
   Date of birth: 'Дата рождения'
   Discount: 'Скидка'
   Groups: 'Группы'
+  Group: 'Группа'
   Edit account: 'Редактировать аккаунт'
   Approve account: 'Одобрить аккаунт'
   Remove admin: 'Удалить admina'
@@ -169,3 +170,7 @@ ru:
   Password reset: 'Восстановление пароля'
   Send instructions: 'Отправить инструкции'
   Delete lesson: 'Удоление урока'
+  Send message: 'Отправить сообщение'
+  New message: 'Новое сообщение'
+  Message was successfully sent: 'Сообщение было успешно отправлено'
+  Post was successfully created: 'Пост был успешно создан'
