More content, bug fixes, error controller

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -137,7 +137,7 @@ ro:
   Settings: 'Setări'
   Discount has to be a percentage: 'Reducerea trebuie să fie un procentaj'
   Academic program: 'Program academic'
-  English courses: 'English courses'
+  English courses: 'Cursuri de engleză'
   Performance: 'Performanţă'
   Weekend school: 'Școală de weekend'
   Vacation school: 'Școală de vacanță'
@@ -176,3 +176,10 @@ ro:
   New message: 'Mesaj nou'
   Message was successfully sent: 'Mesajul a fost transmis cu succes'
   Post was successfully created: 'Postarea a fost creată cu succes'
+  Error: 'Eroare'
+  Page not found: 'Pagina nu a fost găsită'
+  Whoops we couldn’t find the page you were looking for!: 'Whoops n-am găsit pagina pe care o căutați!'
+  The change you wanted was rejected: 'Schimbarea pe care ați dorit-o a fost respinsă'
+  Maybe you tried to change something you didn't have access to.: 'Poate că ați încercat să schimbați ceva la care nu aveați acces.'
+  Looks like something went wrong!: 'Se pare că ceva a mers prost!'
+  We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us.: 'Vom încerca să remediem această problemă cât mai curând posibil, dar dacă problema persistă, nu ezitați să ne contactați.'
