--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -193,3 +193,10 @@ en:
   New message: 'New message'
   Message was successfully sent: 'Message was successfully sent'
   Post was successfully created: 'Post was successfully created'
+  Error: 'Error'
+  Page not found: 'Page not found'
+  Whoops we couldn’t find the page you were looking for!: "Whoops we couldn't find the page you were looking for!"
+  The change you wanted was rejected: 'The change you wanted was rejected'
+  Maybe you tried to change something you didn't have access to.: "Maybe you tried to change something you didn't have access to."
+  Looks like something went wrong!: 'Looks like something went wrong!'
+  We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us.: "We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us."
