--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -174,3 +174,10 @@ ru:
   New message: 'Новое сообщение'
   Message was successfully sent: 'Сообщение было успешно отправлено'
   Post was successfully created: 'Пост был успешно создан'
+  Error: 'Ошибка'
+  Page not found: 'Страница не найдена'
+  Whoops we couldn’t find the page you were looking for!: 'К сожалению, мы не смогли найти страницу, которую вы искали!'
+  The change you wanted was rejected: 'Изменение, которое вы хотели, былe выброшенны'
+  Maybe you tried to change something you didn't have access to.: 'Возможно, вы пытались изменить то, к чему у вас не было доступа.'
+  Looks like something went wrong!: 'Похоже, что-то пошло не так!'
+  We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us.: 'Мы постараемся решить эту проблему как можно скорее, но если проблема не исчезнет, не стесняйтесь обращаться к нам.'
