Error views fix

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -178,7 +178,7 @@ ro:
   Post was successfully created: 'Postarea a fost creată cu succes'
   Error: 'Eroare'
   Page not found: 'Pagina nu a fost găsită'
-  Whoops we couldn’t find the page you were looking for!: 'Whoops n-am găsit pagina pe care o căutați!'
+  Whoops we couldn't find the page you were looking for!: 'Whoops n-am găsit pagina pe care o căutați!'
   The change you wanted was rejected: 'Schimbarea pe care ați dorit-o a fost respinsă'
   Maybe you tried to change something you didn't have access to.: 'Poate că ați încercat să schimbați ceva la care nu aveați acces.'
   Looks like something went wrong!: 'Se pare că ceva a mers prost!'
