--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -195,7 +195,7 @@ en:
   Post was successfully created: 'Post was successfully created'
   Error: 'Error'
   Page not found: 'Page not found'
-  Whoops we couldn’t find the page you were looking for!: "Whoops we couldn't find the page you were looking for!"
+  Whoops we couldn't find the page you were looking for!: "Whoops we couldn't find the page you were looking for!"
   The change you wanted was rejected: 'The change you wanted was rejected'
   Maybe you tried to change something you didn't have access to.: "Maybe you tried to change something you didn't have access to."
   Looks like something went wrong!: 'Looks like something went wrong!'
