Error views fix

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -60,7 +60,7 @@ ro:
   Parent's password: 'Parola parintelui'
   Wrong password: 'Parolă greșită'
   Child profile updated: 'Profilul copilului a fost actualizat'
-  Full account created. To start using it, please follow the instructions sent to your email.: 'Contul complet a fost creat. Pentru al putea folosi urmați instrucțiunile transmise prin email'
+  Full account created To start using it, please follow the instructions sent to your email: 'Contul complet a fost creat. Pentru al putea folosi urmați instrucțiunile transmise prin email.'
   Edit group: 'Editarea grupului'
   The form contains: 'Formularul conține'
   Group name: 'Numele grupului'
@@ -179,7 +179,7 @@ ro:
   Error: 'Eroare'
   Page not found: 'Pagina nu a fost găsită'
   Whoops we couldn't find the page you were looking for!: 'Whoops n-am găsit pagina pe care o căutați!'
-  The change you wanted was rejected: 'Schimbarea pe care ați dorit-o a fost respinsă'
-  Maybe you tried to change something you didn't have access to.: 'Poate că ați încercat să schimbați ceva la care nu aveați acces.'
+  The change you wanted was rejected!: 'Schimbarea pe care ați dorit-o a fost respinsă!'
+  Maybe you tried to change something you didn't have access to: 'Poate că ați încercat să schimbați ceva la care nu aveați acces.'
   Looks like something went wrong!: 'Se pare că ceva a mers prost!'
-  We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us.: 'Vom încerca să remediem această problemă cât mai curând posibil, dar dacă problema persistă, nu ezitați să ne contactați.'
+  We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: 'Vom încerca să remediem această problemă cât mai curând posibil, dar dacă problema persistă, nu ezitați să ne contactați.'
