--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,7 +77,7 @@ en:
   Parent's password: "Parent's password"
   Wrong password: 'Wrong password'
   Child profile updated: 'Child profile updated'
-  Full account created. To start using it, please follow the instructions sent to your email.: 'Full account created. To start using it, please follow the instructions sent to your email.'
+  Full account created To start using it, please follow the instructions sent to your email: 'Full account created. To start using it, please follow the instructions sent to your email.'
   Edit group: 'Edit group'
   The form contains: 'The form contains'
   Group name: 'Group name'
@@ -196,7 +196,7 @@ en:
   Error: 'Error'
   Page not found: 'Page not found'
   Whoops we couldn't find the page you were looking for!: "Whoops we couldn't find the page you were looking for!"
-  The change you wanted was rejected: 'The change you wanted was rejected'
-  Maybe you tried to change something you didn't have access to.: "Maybe you tried to change something you didn't have access to."
+  The change you wanted was rejected!: 'The change you wanted was rejected!'
+  Maybe you tried to change something you didn't have access to: "Maybe you tried to change something you didn't have access to."
   Looks like something went wrong!: 'Looks like something went wrong!'
-  We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us.: "We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us."
+  We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: "We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us."
