--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -57,7 +57,7 @@ ru:
   Parent's password: 'Пароль родителя'
   Wrong password: 'Неверный пароль'
   Child account updated: 'Профиль ребёнка обновлён'
-  Full account created. To start using it, please follow the instructions sent to your email.: 'Полный аккаунт создан. Чтобы начать использовать его, пожалуйста, следуйте инструкциям, отправленным на ваш email'
+  Full account created To start using it, please follow the instructions sent to your email: 'Полный аккаунт создан. Чтобы начать использовать его, пожалуйста, следуйте инструкциям, отправленным на ваш email.'
   Edit group: 'Редактирование группы'
   The form contains: 'Форма содержит'
   Group name: 'Название группы'
@@ -177,7 +177,7 @@ ru:
   Error: 'Ошибка'
   Page not found: 'Страница не найдена'
   Whoops we couldn't find the page you were looking for!: 'К сожалению, мы не смогли найти страницу, которую вы искали!'
-  The change you wanted was rejected: 'Изменение, которое вы хотели, былe выброшенны'
-  Maybe you tried to change something you didn't have access to.: 'Возможно, вы пытались изменить то, к чему у вас не было доступа.'
+  The change you wanted was rejected!: 'Изменение, которое вы хотели, былe выброшенны!'
+  Maybe you tried to change something you didn't have access to: 'Возможно, вы пытались изменить то, к чему у вас не было доступа.'
   Looks like something went wrong!: 'Похоже, что-то пошло не так!'
-  We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us.: 'Мы постараемся решить эту проблему как можно скорее, но если проблема не исчезнет, не стесняйтесь обращаться к нам.'
+  We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: 'Мы постараемся решить эту проблему как можно скорее, но если проблема не исчезнет, не стесняйтесь обращаться к нам.'
