More static pages, Pundit redirect

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -183,3 +183,4 @@ ro:
   Maybe you tried to change something you didn't have access to: 'Poate că ați încercat să schimbați ceva la care nu aveați acces.'
   Looks like something went wrong!: 'Se pare că ceva a mers prost!'
   We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: 'Vom încerca să remediem această problemă cât mai curând posibil, dar dacă problema persistă, nu ezitați să ne contactați.'
+  You don't seem to have access to view this page Please log in as a different user to see it: 'Nu pare că aveți acces la această pagină. Vă rugăm să vă autentificați ca alt utilizator pentru a o putea accesa.'
