--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -181,3 +181,4 @@ ru:
   Maybe you tried to change something you didn't have access to: 'Возможно, вы пытались изменить то, к чему у вас не было доступа.'
   Looks like something went wrong!: 'Похоже, что-то пошло не так!'
   We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: 'Мы постараемся решить эту проблему как можно скорее, но если проблема не исчезнет, не стесняйтесь обращаться к нам.'
+  You don't seem to have access to view this page Please log in as a different user to see it: 'У вас нет доступа для просмотра этой страницы. Пожалуйста, войдите как другой пользователь, чтобы увидеть её.'
