--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -200,3 +200,4 @@ en:
   Maybe you tried to change something you didn't have access to: "Maybe you tried to change something you didn't have access to."
   Looks like something went wrong!: 'Looks like something went wrong!'
   We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: "We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us."
+  You don't seem to have access to view this page Please log in as a different user to see it: "You don't seem to have access to view this page. Please log in as a different user to see it."
