--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,7 +159,7 @@ en:
   Performance: 'Performance'
   Weekend school: 'Weekend school'
   Vacation school: 'Vacation school'
-  Getting ready for school: 'Getting ready for school'
+  Children's workshop: "Children's workshop"
   International camps: 'International camps'
   UK: 'United Kingdom'
   Germany: 'Germany'
@@ -201,3 +201,4 @@ en:
   Looks like something went wrong!: 'Looks like something went wrong!'
   We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: "We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us."
   You don't seem to have access to view this page Please log in as a different user to see it: "You don't seem to have access to view this page. Please log in as a different user to see it."
+  Home: 'Home'
