--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -141,7 +141,7 @@ ro:
   Performance: 'Performanţă'
   Weekend school: 'Școală de weekend'
   Vacation school: 'Școală de vacanță'
-  Getting ready for school: 'Pregătire de școală'
+  Children's workshop: 'Atelierul copiilor'
   International camps: 'Tabere internaționale'
   UK: 'Marea Britanie'
   Germany: 'Germania'
@@ -184,3 +184,4 @@ ro:
   Looks like something went wrong!: 'Se pare că ceva a mers prost!'
   We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: 'Vom încerca să remediem această problemă cât mai curând posibil, dar dacă problema persistă, nu ezitați să ne contactați.'
   You don't seem to have access to view this page Please log in as a different user to see it: 'Nu pare că aveți acces la această pagină. Vă rugăm să vă autentificați ca alt utilizator pentru a o putea accesa.'
+  Home: 'Acasă'
