--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -139,7 +139,7 @@ ru:
   Performance: 'Производительность'
   Weekend school: 'Weekend школа'
   Vacation school: 'Каникулярная школа'
-  Getting ready for school: 'Подготовка к школе'
+  Children's workshop: 'Детская мастерская'
   International camps: 'Интернациональные лагеря'
   UK: 'Великобритания'
   Germany: 'Германия'
@@ -182,3 +182,4 @@ ru:
   Looks like something went wrong!: 'Похоже, что-то пошло не так!'
   We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: 'Мы постараемся решить эту проблему как можно скорее, но если проблема не исчезнет, не стесняйтесь обращаться к нам.'
   You don't seem to have access to view this page Please log in as a different user to see it: 'У вас нет доступа для просмотра этой страницы. Пожалуйста, войдите как другой пользователь, чтобы увидеть её.'
+  Home: 'Главная'
