--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -53,7 +53,7 @@ ro:
   we need your current password to confirm your changes: 'avem nevoie de parola curentă pentru a confirma modificările dumneavoastră'
   Child sign up: 'Înregistrarea copilului'
   Sign up: 'Înregistrare'
-  Make full account: 'Crează cont complet'
+  Make full account: 'Creează cont complet'
   Child's email: 'Email-ul copilului'
   Child's phone number: 'Numarul de telefon al copilului'
   Child's password: 'Parola copilului'
@@ -185,3 +185,12 @@ ro:
   We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: 'Vom încerca să remediem această problemă cât mai curând posibil, dar dacă problema persistă, nu ezitați să ne contactați.'
   You don't seem to have access to view this page Please log in as a different user to see it: 'Nu pare că aveți acces la această pagină. Vă rugăm să vă autentificați ca alt utilizator pentru a o putea accesa.'
   Home: 'Acasă'
+  Reject account: 'Respinge contul'
+  Are you sure you want to reject this account?: 'Sigur doriți să respingeți acest cont?'
+  The user was accepted: 'Utilizatorul a fost aprobat'
+  The user was rejected: 'Utilizatorul a fost respins'
+  The group was successfully deleted: 'Grupul a fost șters cu succes'
+  The group was successfully created: 'Grupul a fost creat cu succes'
+  Notifications for: 'Notificări pentru'
+  Notifications: 'Notificări'
+  No notifications: 'Nu există notificări'
