--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -183,3 +183,12 @@ ru:
   We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us: 'Мы постараемся решить эту проблему как можно скорее, но если проблема не исчезнет, не стесняйтесь обращаться к нам.'
   You don't seem to have access to view this page Please log in as a different user to see it: 'У вас нет доступа для просмотра этой страницы. Пожалуйста, войдите как другой пользователь, чтобы увидеть её.'
   Home: 'Главная'
+  Reject account: 'Отклонять аккаунт'
+  Are you sure you want to reject this account?: 'Вы уверены что хотите отклонять этот аккаунт?'
+  The user was accepted: 'Пользователь был одобрён'
+  The user was rejected: 'Пользователь был отклонён'
+  The group was succesfully deleted: 'Группа была успешно удалена'
+  The group was succesfully created: 'Группа была успешно создана'
+  Notifications for: 'Уведомление для'
+  Notifications: 'Уведомления'
+  No notifications: 'Нет уведомлений'
