--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -194,3 +194,15 @@ ro:
   Notifications for: 'Notificări pentru'
   Notifications: 'Notificări'
   No notifications: 'Nu există notificări'
+  Welcome: 'Bine ai venit'
+  You can confirm your account email through the link below: 'Poți confirma emailul contului dumneavoastră prin intermediul link-ului de mai jos'
+  Confirm my account: 'Confirmați contul meu'
+  Hello: 'Salut'
+  We're contacting you to notify you that your email is being changed to: 'Vă contactăm pentru a vă comunica faptul că email-ul dumneavoastră este modificat, iar noua adresă este'
+  We're contacting you to notify you that your email has been changed to: 'Vă contactăm pentru a vă comunica faptul că email-ul dumneavoastră a fost modificat, iar noua adresă este'
+  We're contacting you to notify you that your password has been changed: 'Vă contactăm pentru a vă anunța că parola dvs. a fost modificată.'
+  Someone has requested a link to change your password You can do this through the link below: 'Cineva a solicitat un link pentru a vă schimba parola. Puteți face acest lucru prin intermediul link-ului de mai jos.'
+  If you didn't request this, please ignore this email: 'Dacă nu ați solicitat acest lucru, ignorați acest mesaj.'
+  Your password won't change until you access the link above and create a new one: 'Parola dumneavoastră nu se va modifica până când nu veți accesa linkul de mai sus și nu veți crea una nouă.'
+  Your account was successfully reviewed by an administrator You can now log in here: 'Contul dumneavoastră a fost revizuit cu succes de un administrator. Acum vă puteți conecta accesând link-ul de mai jos.'
+  Your child's account was successfully reviewed by an administrator You can manage it from your own account: 'Contul copilului dumneavoastră a fost revizuit cu succes de un administrator. Puteți să îl gestionați din propriul cont:'
