--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -192,3 +192,15 @@ ru:
   Notifications for: 'Уведомление для'
   Notifications: 'Уведомления'
   No notifications: 'Нет уведомлений'
+  Welcome: 'Добро пожаловать'
+  You can confirm your account email through the link below: 'Вы можете подтвердить email своей учетной записи по ссылке ниже'
+  Confirm my account: 'Подтвердите мой аккаунт'
+  Hello: 'Здравствуйте'
+  We're contacting you to notify you that your email is being changed to: 'Мы связываемся с вами, чтобы уведомить вас об изменении вашего адреса электронной почты на'
+  We're contacting you to notify you that your email has been changed to: 'Мы связываемся с вами, чтобы уведомить вас, что ваш адрес электронной почты был изменен на'
+  We're contacting you to notify you that your password has been changed: "Мы связываемся с вами, чтобы уведомить вас, что ваш пароль был изменен."
+  Someone has requested a link to change your password You can do this through the link below: 'Кто-то запросил ссылку для изменения пароля. Вы можете сделать это по ссылке ниже.'
+  If you didn't request this, please ignore this email: 'Если вы не просили об этом, пожалуйста, игнорируйте это письмо.'
+  Your password won't change until you access the link above and create a new one: 'Ваш пароль не изменится, пока вы не перейдете по ссылке выше и не создадите новый.'
+  Your account was successfully reviewed by an administrator You can now log in here: 'Ваша учетная запись была успешно рассмотрена администратором. Теперь вы можете войти здесь:'
+  Your child's account was successfully reviewed by an administrator You can manage it from your own account: 'Аккаунт вашего ребенка был успешно рассмотрен администратором. Вы можете управлять им из своей учетной записи:'
