--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -211,3 +211,15 @@ en:
   Notifications for: 'Notifications for'
   Notifications: 'Notifications'
   No notifications: 'No notifications'
+  Welcome: 'Welcome'
+  You can confirm your account email through the link below: 'You can confirm your account email through the link below'
+  Confirm my account: 'Confirm my account'
+  Hello: 'Hello'
+  We're contacting you to notify you that your email is being changed to: "We're contacting you to notify you that your email is being changed to"
+  We're contacting you to notify you that your email has been changed to: "We're contacting you to notify you that your email has been changed to"
+  We're contacting you to notify you that your password has been changed: "We're contacting you to notify you that your password has been changed."
+  Someone has requested a link to change your password You can do this through the link below: 'Someone has requested a link to change your password. You can do this through the link below.'
+  If you didn't request this, please ignore this email: "If you didn't request this, please ignore this email."
+  Your password won't change until you access the link above and create a new one: "Your password won't change until you access the link above and create a new one."
+  Your account was successfully reviewed by an administrator You can now log in here: 'Your account was successfully reviewed by an administrator. You can now log in here:'
+  Your child's account was successfully reviewed by an administrator You can manage it from your own account: "Your child's account was successfully reviewed by an administrator. You can manage it from your own account:"
