--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -223,3 +223,12 @@ en:
   Your password won't change until you access the link above and create a new one: "Your password won't change until you access the link above and create a new one."
   Your account was successfully reviewed by an administrator You can now log in here: 'Your account was successfully reviewed by an administrator. You can now log in here:'
   Your child's account was successfully reviewed by an administrator You can manage it from your own account: "Your child's account was successfully reviewed by an administrator. You can manage it from your own account:"
+  Overlap found with: 'Overlap found with '
+  s timetable in group: "'s timetable in group "
+  Post updated: 'Post updated'
+  Post deleted: 'Post deleted'
+  Vacation was successfully created: 'Vacation was successfully created'
+  Vacation updated: 'Vacation updated'
+  Vacation deleted: 'Vacation deleted'
+  Currently waiting confirmation for: 'Currently waiting confirmation for: '
+  Leave blank if you don't want to change it: "Leave blank if you don't want to change it"
