--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -206,3 +206,12 @@ ro:
   Your password won't change until you access the link above and create a new one: 'Parola dumneavoastră nu se va modifica până când nu veți accesa linkul de mai sus și nu veți crea una nouă.'
   Your account was successfully reviewed by an administrator You can now log in here: 'Contul dumneavoastră a fost revizuit cu succes de un administrator. Acum vă puteți conecta accesând link-ul de mai jos.'
   Your child's account was successfully reviewed by an administrator You can manage it from your own account: 'Contul copilului dumneavoastră a fost revizuit cu succes de un administrator. Puteți să îl gestionați din propriul cont:'
+  Overlap found with: 'A fost găsită o coliziune cu orarul utilizatorului '
+  s timetable in group: ' în grupul '
+  Post updated: 'Postarea a fost actualizată'
+  Post deleted: 'Postarea a fost ștearsă'
+  Vacation was successfully created: 'Vacanța a fost creată cu succes'
+  Vacation updated: 'Vacanța a fost actualizată cu succes'
+  Vacation deleted: 'Vacanța a fost ștearsă cu succes'
+  Currently waiting confirmation for: 'Momentan se așteaptă confirmarea pentru: '
+  Leave blank if you don't want to change it: 'Lăsați necompletat dacă nu doriți să o schimbați'
