--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -204,3 +204,12 @@ ru:
   Your password won't change until you access the link above and create a new one: 'Ваш пароль не изменится, пока вы не перейдете по ссылке выше и не создадите новый.'
   Your account was successfully reviewed by an administrator You can now log in here: 'Ваша учетная запись была успешно рассмотрена администратором. Теперь вы можете войти здесь:'
   Your child's account was successfully reviewed by an administrator You can manage it from your own account: 'Аккаунт вашего ребенка был успешно рассмотрен администратором. Вы можете управлять им из своей учетной записи:'
+  Overlap found with: 'Было обноружено совпадение в расписание пользовательа '
+  s timetable in group: ' в группе '
+  Post updated: 'Пост был обновлён'
+  Post deleted: 'Пост был удалён'
+  Vacation was successfully created: 'Отпуск был успешно создан'
+  Vacation updated: 'Отпуск обновлен'
+  Vacation deleted: 'Отпуск удален'
+  Currently waiting confirmation for: 'В настоящее время ожидает подтверждения для: '
+  Leave blank if you don't want to change it: 'Оставьте пустым, если вы не хотите его менять'
