Bug fixes, turbolinks optimization

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -232,3 +232,4 @@ en:
   Vacation deleted: 'Vacation deleted'
   Currently waiting confirmation for: 'Currently waiting confirmation for: '
   Leave blank if you don't want to change it: "Leave blank if you don't want to change it"
+  A lesson can't be scheduled after the group's expiration date: "A lesson can't be scheduled after the group's expiration date"
