--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -213,3 +213,4 @@ ru:
   Vacation deleted: 'Отпуск удален'
   Currently waiting confirmation for: 'В настоящее время ожидает подтверждения для: '
   Leave blank if you don't want to change it: 'Оставьте пустым, если вы не хотите его менять'
+  A lesson can't be scheduled after the group's expiration date: 'Бы не можете заплонировать урок после окончание српка группы'
