--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -214,3 +214,4 @@ ru:
   Currently waiting confirmation for: 'В настоящее время ожидает подтверждения для: '
   Leave blank if you don't want to change it: 'Оставьте пустым, если вы не хотите его менять'
   A lesson can't be scheduled after the group's expiration date: 'Бы не можете заплонировать урок после окончание српка группы'
+  Update: 'Обновить'
